--- a/app/globals.css
+++ b/app/globals.css
@@ -5,7 +5,8 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
-  padding: 1rem;
+  padding: 1rem 0rem;
+  
 }
 
 @media (prefers-color-scheme: dark) {
@@ -18,5 +19,4 @@
 body {
   color: var(--background);
   background: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
 }
