--- a/app/globals.css
+++ b/app/globals.css
@@ -20,3 +20,11 @@ body {
   color: var(--background);
   background: var(--foreground);
 }
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera */
+}
+.no-scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
